<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/fon" />
    <!-- Для чоловіка -->
    <LinearLayout
        android:id="@+id/male_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparentBlack"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/text_font"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Дані про чоловіка"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/male_name_edittext"
                    android:layout_width="match_parent"

                    android:fontFamily="@font/text_font"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеєжзиіїйклмнопрстуфхцчшщьюяАБВГДЕЄЖЗИІЇЙКЛМНОПРСТУФХЦЧШЩЬЮЯ"
                    android:hint="@string/name"
                    android:minHeight="48dp" />

                <com.example.mysterymind.controller.splashLoadScreen.CustomSpinner
                    android:id="@+id/male_zodiac_spinner"
                    style="@style/CustomSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:prompt="@string/choose_sign"
                    android:textColor="@color/transparentWhite"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/text_font"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="Дані про жінку"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/female_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_font"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеєжзиіїйклмнопрстуфхцчшщьюяАБВГДЕЄЖЗИІЇЙКЛМНОПРСТУФХЦЧШЩЬЮЯ"
                    android:hint="@string/name"
                    android:minHeight="48dp" />

         <!--       <Spinner
                    android:id="@+id/female_zodiac_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/zodiac_signs"
                    android:minHeight="48dp"
                    android:prompt="@string/select_zodiac_sign" />-->
                <com.example.mysterymind.controller.splashLoadScreen.CustomSpinner
                    android:id="@+id/female_zodiac_spinner"
                    style="@style/CustomSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:prompt="@string/choose_sign"
                    android:textColor="@color/transparentWhite"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:fontFamily="@font/button_font"

                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_burgundy"
                android:text="Аналіз"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/compatibilityProgressBar"
                android:layout_width="383dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="123dp" />

            <TextView
                android:fontFamily="@font/button_font"
                android:id="@+id/textView4"
                android:layout_width="110dp"
                android:layout_height="167dp"
                android:layout_alignStart="@+id/compatibilityProgressBar"
                android:layout_alignTop="@+id/compatibilityProgressBar"
                android:layout_alignEnd="@+id/compatibilityProgressBar"
                android:layout_alignBottom="@+id/compatibilityProgressBar"
                android:layout_marginStart="90dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="75dp"
                android:gravity="center"
                android:text=""
                android:textSize="90dp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="51dp"
                android:fontFamily="@font/anal_font"
                android:background="@android:color/transparent"
                android:text="Докладніше..."
                android:textColor="@color/holo_red_dark" />


        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
